REFACTOR use babbel-changed

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "lint:ts": "tslint --project ./",
     "lint:ts:fix": "tslint --project ./ --fix",
     "check-types": "tsc",
-    "transpile": "node scripts/transpile.js",
+    "transpile": "babel-changed --src ./src --dest ./dist/lib --extensions \"ts\"",
     "build:es": "rimraf -rf dist/es && cross-env NODE_ENV=es6 babel src --out-dir dist/es --source-maps --extensions \".ts,.js\"",
     "build:types": "rimraf -rf ./dist/types && tsc --project ./config/tsconfig.types.json && cp -r ./src/types ./dist/types/types",
     "build": "npm run clear && npm run transpile && npm run build:es && npm run build:types && browserify dist/lib/browserify.index.js > dist/rxdb.browserify.js && uglifyjs --compress --mangle --output dist/rxdb.browserify.min.js -- dist/rxdb.browserify.js",
@@ -137,6 +137,7 @@
     "@babel/preset-env": "7.10.3",
     "@babel/preset-typescript": "7.10.1",
     "@babel/types": "7.10.3",
+    "@smpx/babel-changed": "0.3.0",
     "@types/core-js": "2.5.3",
     "@types/faker": "4.1.12",
     "@types/memdown": "3.0.0",
